Adjusted css styling for project-background as safari and ios-chrome do not support 'background-attachment: fixed'. Changed it instead to local and removed the no-repeat for the background to work properly on ios mobile devices.

--- a/src/components/projects/style.css
+++ b/src/components/projects/style.css
@@ -8,8 +8,7 @@
 #project-background {
     background-image: url(../../images/projects.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: local;
     width: 100%;
     padding-bottom: 20px;
 }
